--- a/app/views/likes/create.turbo_stream.erb
+++ b/app/views/likes/create.turbo_stream.erb
@@ -1,5 +1,3 @@
-<%= turbo_stream.update "#{dom_id(@likeable)}_like" do %>
-  <%= button_to like_path(@like), method: :delete do %>
-    <i class="fa-solid fa-thumbs-up fa-xl cursor-pointer text-primary-500"></i>
-  <% end %>
+<%= turbo_stream.replace "#{dom_id(@likeable)}_like" do %>
+  <%= render 'shared/likeable_button', likeable: @likeable, like: @like %>
 <% end %>
