--- a/app/views/likes/destroy.turbo_stream.erb
+++ b/app/views/likes/destroy.turbo_stream.erb
@@ -1,5 +1,3 @@
-<%= turbo_stream.update "#{dom_id(@likeable)}_like" do %>
-  <%= button_to likes_path(like: { likeable_type: @likeable.class.name, likeable_id: @likeable.id }) do %>
-    <i class="far fa-thumbs-up fa-xl cursor-pointer"></i>
-  <% end %>
+<%= turbo_stream.replace "#{dom_id(@likeable)}_like" do %>
+  <%= render 'shared/likeable_button', likeable: @likeable, like: nil %>
 <% end %>
