--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -6,4 +6,6 @@
     <%= link_to t('.create_post_button'), new_post_path, class: 'bg-primary-500 rounded font-semibold px-5 py-2.5 text-white' %>
   </section>
 <% else %>
+  <section class="flex flex-col items-center mt-4 mb-8">
+  </section>
 <% end %>
