--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,3 +1,24 @@
-<div class="flex-center my-8">
-  <%= render 'post', post: @post, has_link_button: false %>
+<div class="my-8">
+  <div class="my-8 ml-32 rounded-xl">
+    <%= link_to dashboard_path, class: 'bg-secondary-500 rounded-xl py-2.5 px-4 font-semibold text-white hover:bg-primary-500' do %>
+      <i class="fas fa-chevron-left"></i>
+      <span><%= t('.go_back') %></span>
+    <% end %>
+  </div>
+
+  <div class="flex flex-col items-center">
+    <%= render 'post', post: @post, has_link_button: false, has_comments_count: false %>
+  </div>
+
+  <div class="mt-12 mb-8 flex-center">
+    <div class="max-w-2xl flex flex-col items-center w-full">
+      <%= render 'comments/form', id: 'post_comment', comment: @comment, commentable: @post %>
+    </div>
+  </div>
+
+  <div class="flex-center">
+    <div class="max-w-2xl flex flex-col items-center gap-4 w-full" id=<%= "#{dom_id(@post)}" %>>
+      <%= render partial: 'comments/comment', collection: @post.comments.order(created_at: :desc), locals: { has_like_button: true, depth: 0 } %>
+    </div>
+  </div>
 </div>
