--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -7,7 +7,7 @@
   </div>
 
   <div class="flex flex-col items-center">
-    <%= render 'post', post: @post, has_link_button: false, has_comments_count: false %>
+    <%= render 'post', post: @post, has_link_button: false, has_comments_count: false, display_only: false %>
   </div>
 
   <div class="mt-12 mb-8 flex-center">
@@ -18,7 +18,7 @@
 
   <div class="flex-center">
     <div class="max-w-2xl flex flex-col items-center gap-4 w-full" id=<%= "#{dom_id(@post)}" %>>
-      <%= render partial: 'comments/comment', collection: @comments.order(created_at: :desc), locals: { has_like_button: true, depth: 0 } %>
+      <%= render partial: 'comments/comment', collection: @comments.order(created_at: :desc), locals: { has_like_button: true, depth: 0, display_only: false } %>
     </div>
   </div>
 </div>
