--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,7 +1,7 @@
 @import "font-awesome";
 @import "actiontext.css";
-@import "rouge.css";
-@import "glightbox.css";
+@import "./vendor/rouge.css";
+@import "./vendor/glightbox.css";
 
 @import url("https://fonts.googleapis.com/css2?family=Sail&display=swap");
 
