--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<header class="sticky top-0 bg-white bg-opacity-80 backdrop-blur z-50 w-full flex items-center justify-between border-b px-4 py-2 md:p-0 md:px-8">
+<header class="sticky top-0 bg-white bg-opacity-80 backdrop-blur z-50 w-full flex items-center justify-between border-b border-b-primary-500 px-4 py-2 md:p-0 md:px-8">
   <div class="hidden items-center md:flex gap-16">
     <%= link_to root_path, class: 'flex-center gap-1.5 hover:text-primary-500 text-primary-600' do %>
       <i class="fa-lg fab fa-rocketchat"></i>
