--- a/app/views/admin/accounts/index.html.erb
+++ b/app/views/admin/accounts/index.html.erb
@@ -1,37 +1,51 @@
-<%= link_to 'Add new user', [:new, :admin, :user] %>
-<hr />
+<div class="mx-8 my-6 flex justify-between items-center">
+  <%= link_to t('.add_user'), %i[new admin user], class: 'px-4 py-2.5 bg-primary-500 hover:bg-secondary-500 text-white font-bold rounded-lg' %>
+  <%== pagy_nav(@pagy) %>
+</div>
 
-<table class="table-auto text-sm">
-  <thead class="bg-gray-100">
-    <tr>
-      <th>First Name</th>
-      <th>Last Name</th>
-      <th>Username</th>
-      <th>Role</th>
-      <th>Created At</th>
-      <th>Updated At</th>
-      <th>Actions</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @accounts.each do |account| %>
-      <tr class="border-b">
-        <td><%= account.first_name %></td>
-        <td><%= account.last_name %></td>
-        <td><%= account.username %></td>
-        <td><%= account.role %></td>
-        <td><%= account.created_at %></td>
-        <td><%= account.updated_at %></td>
-        <td>
-          <% if (current_account.superadmin? && account.can_moderate?) || account.user? %>
-            <%= link_to 'Show', [:admin, account] %>
-            <%= link_to 'Edit', [:edit, :admin, account] %>
-            <%= button_to 'Delete', [:admin, account], method: :delete %>
-          <% end %>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<%== pagy_nav(@pagy) %>
+<div class="w-full flex-center mb-8">
+  <div class="w-full overflow-auto max-w-5xl mx-8 border rounded-xl">
+    <table class="border-separate border-spacing-0 text-xs md:text-sm w-full rounded-xl overflow-hidden">
+      <thead class="bg-gray-100">
+        <tr>
+          <%== table_cols(%w[first_name last_name username role], class: 'py-2.5 text-center px-3') %>
+        </tr>
+      </thead>
+      <tbody>
+        <% @accounts.each do |account| %>
+          <tr class="even:bg-gray-50 odd:bg-white">
+            <td class="text-center p-0.5 md:p-2"><%= account.first_name %></td>
+            <td class="text-center p-0.5 md:p-2"><%= account.last_name %></td>
+            <td class="text-center p-0.5 md:p-2 max-w-20 overflow-hidden overflow-ellipsis"><%= account.username %></td>
+            <td class="text-center p-0.5 md:p-2"><%= account.role.capitalize %></td>
+            <td class="text-center p-0.5 md:p-2"><%= account.created_at.strftime('%d %B, %Y') %></td>
+            <td class="text-center p-0.5 md:p-2"><%= account.updated_at.strftime('%d %B, %Y') %></td>
+            <td class="text-center p-0.5 md:p-2">
+              <% if (current_account.superadmin? && account.can_moderate?) || account.user? %>
+                <div
+                  class="relative min-w-fit"
+                  data-controller="dropdown"
+                  data-dropdown-other-toggle-classes-value=<%= %w[px-3 py-1.5].to_json %>
+                >
+                  <button data-action="dropdown#toggle"><i class="fa-solid fa-ellipsis"></i></button>
+                  <div
+                    class="absolute w-0 h-0 bg-white shadow z-[48] right-0 bottom-4 rounded-xl transition-all duration-100 overflow-hidden"
+                    data-dropdown-target="dropdown"
+                  >
+                    <div class="flex flex-col gap-1.5 text-left">
+                      <%= link_to t('show'), [:admin, account] %>
+                      <%= link_to t('edit'), [:edit, :admin, account] %>
+                      <%= button_to t('delete'), [:admin, account], method: :delete %>
+                    </div>
+                  </div>
+                </div>
+              <% else %>
+                -
+              <% end %>
+            </td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+</div>
