--- a/app/views/admin/prediction_params/index.html.erb
+++ b/app/views/admin/prediction_params/index.html.erb
@@ -1,33 +1,46 @@
-<table class="table-auto text-sm">
-  <thead class="bg-gray-100">
-    <tr>
-      <th>Name</th>
-      <th>Parameter Type</th>
-      <th>Description</th>
-      <th>Machine Learning Model</th>
-      <th>Created At</th>
-      <th>Updated At</th>
-      <th>Actions</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @prediction_params.each do |prediction_param| %>
-      <tr class="border-b">
-        <td><%= prediction_param.name %></td>
-        <td><%= prediction_param.param_type %></td>
-        <td><%= prediction_param.description.truncate(20) %></td>
-        <td><%= prediction_param.ml_model.title.truncate(10) %></td>
-        <td><%= prediction_param.created_at %></td>
-        <td><%= prediction_param.updated_at %></td>
-        <td>
-          <%= link_to 'Show', [:admin, prediction_param.ml_model, prediction_param] %>
-          <%= link_to 'Edit', [:edit, :admin, prediction_param.ml_model, prediction_param] %>
-          <%= button_to('Destroy', [:admin, :admin, prediction_param.ml_model, prediction_param], method: :delete) %>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<div class="mx-8 my-6 flex justify-between items-center">
+  <%== pagy_nav(@pagy) %>
+</div>
 
-<%== pagy_nav(@pagy) %>
-
+<div class="w-full flex-center mb-8">
+  <div class="w-full overflow-auto max-w-5xl mx-8 border rounded-xl">
+    <table class="border-separate border-spacing-0 text-xs md:text-sm w-full rounded-xl overflow-hidden">
+      <thead class="bg-gray-100">
+        <tr>
+          <%== table_cols(%w[name paramter_type description ml_model], class: 'py-2.5 text-center px-3') %>
+        </tr>
+      </thead>
+      <tbody>
+        <% @prediction_params.each do |prediction_param| %>
+          <tr class="even:bg-gray-50 odd:bg-white">
+            <td class="text-center p-0.5 md:p-2"><%= prediction_param.name %></td>
+            <td class="text-center p-0.5 md:p-2"><%= prediction_param.parameter_type %></td>
+            <td class="text-center p-0.5 md:p-2 max-w-28 overflow-hidden overflow-ellipsis whitespace-nowrap"><%= prediction_param.description %></td>
+            <td class="text-center p-0.5 md:p-2 max-w-28 overflow-hidden overflow-ellipsis whitespace-nowrap"><%= prediction_param.ml_model.title %></td>
+            <td class="text-center p-0.5 md:p-2"><%= prediction_param.created_at.strftime('%d %B, %Y') %></td>
+            <td class="text-center p-0.5 md:p-2"><%= prediction_param.updated_at.strftime('%d %B, %Y') %></td>
+            <td class="text-center p-0.5 md:p-2">
+              <div
+                class="relative min-w-fit"
+                data-controller="dropdown"
+                data-dropdown-other-toggle-classes-value=<%= %w[px-3 py-1.5].to_json %>
+              >
+                <button data-action="dropdown#toggle"><i class="fa-solid fa-ellipsis"></i></button>
+                <div
+                  class="absolute w-0 h-0 bg-white shadow z-[48] right-0 bottom-4 rounded-xl transition-all duration-100 overflow-hidden"
+                  data-dropdown-target="dropdown"
+                >
+                  <div class="flex flex-row gap-1.5 text-left">
+                    <%= link_to t('show'), [:admin, prediction_param] %>
+                    <%= link_to t('edit'), [:edit, :admin, prediction_param] %>
+                    <%= button_to t('delete'), [:admin, prediction_param], method: :delete %>
+                  </div>
+                </div>
+              </div>
+            </td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+</div>
