--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -2,7 +2,7 @@
   <div class="container relative w-full h-full flex flex-row items-start gap-8 p-8">
     <aside class="top-20 sticky rounded-2xl bg-white p-8 hidden md:block">
       <div class="flex flex-col items-center gap-2.5">
-        <%= image_tag current_account.avatar, class: 'w-20 h-20 rounded-full'%>
+        <%= account_avatar(current_account) %>
         <%= link_to current_account.full_name, account_path(current_account), class: 'text-sm font-bold text-primary-500 hover:underline cursor-pointer min-w-40 text-center max-w-52 overflow-ellipsis overflow-hidden whitespace-nowrap' %>
       </div>
 
