--- a/app/views/shared/_admin_sidebar.html.erb
+++ b/app/views/shared/_admin_sidebar.html.erb
@@ -1,4 +1,4 @@
-<nav class="flex-shrink-0 relative min-h-screen bg-white shadow-xl">
+<nav class="flex-shrink-0 fixed md:relative min-h-full bg-white shadow-xl">
   <div data-sidebar-target="sidebar" class="min-w-full sticky top-0 transition-all overflow-y-hidden hover:overflow-y-auto overflow-x-hidden duration-100">
     <div class="flex-center mt-4">
       <span class="w-6 h-6 md:w-10 md:h-10 flex-center text-xl md:text-3xl font-bold rounded-full bg-primary-500 text-white" data-action="click->sidebar#toggleSidebar"><%= current_account.first_name.first %></span>
@@ -11,7 +11,7 @@
         <%= link_to [:admin, link], data: { turbo_frame: 'main' } do %>
           <li class="flex gap-5 items-center pl-4 md:pl-8 py-1.5 transition-all duration-100 <%= 'border-primary-500 border-l-4 text-primary-500' if params[:controller] == "admin/#{link.to_s}"%>" data-sidebar-target="tab" data-id=<%= "admin/#{link.to_s}" %>>
             <i class="<%= icon %>"></i>
-            <span class="whitespace-nowrap font-semibold"><%= link.to_s.titleize %></span>
+            <span class="whitespace-nowrap font-semibold"><%= t ".#{link}" %></span>
           </li>
         <% end %>
       <% end %>
