--- a/app/views/shared/_admin_sidebar.html.erb
+++ b/app/views/shared/_admin_sidebar.html.erb
@@ -7,6 +7,12 @@
     <hr class="mt-6 mb-4 mx-4"/>
 
     <ul class="flex flex-col gap-0 text-sm">
+      <%= link_to root_path do %>
+        <li class="flex gap-5 items-center pl-4 md:pl-8 py-1.5 transition-all duration-100 font-semibold">
+          <i class="fa-solid fa-house"></i>
+          <span><%= t '.as_user' %></span>
+        </li>
+      <% end %>
       <% Admin::AdminHelper::ADMIN_LINKS.each do |link, icon| %>
         <%= link_to [:admin, link], data: { turbo_frame: 'main' } do %>
           <li class="flex gap-5 items-center pl-4 md:pl-8 py-1.5 transition-all duration-100 <%= 'border-primary-500 border-l-4 text-primary-500' if params[:controller] == "admin/#{link.to_s}"%>" data-sidebar-target="tab" data-id=<%= "admin/#{link.to_s}" %>>
